CHANGES.txt - 2006-04-18
------------------------

CHANGES IN CUPS V1.2rc3

	- Added the SNMP backend for network printer discovery
	  (STR #1555)
	- cupstestppd now fails PPD files with 1284DeviceId
	  instead of 1284DeviceID, and cups-driverd uses a
	  case-insensitive comparison when looking for it (STR
	  #1573)
	- cupsDoFileRequest() and cupsDoRequest() now work
	  properly with non-blocking HTTP connections.
	- Added Swedish translation (STR #1569)
	- "make install" now installs the MIME files with world
	  read permissions (STR #1565)
	- More CDSA encryption support fixes (STR #1563)
	- Updated the default mime.types file to support printing
	  of files that do not have a locally-recognized MIME
	  media type to raw or System V queues.
	- Updated the serial port detection code on Linux (STR
	  #1562)
	- Added some more error checking to httpGetHostname()
	  (STR #1561)
	- The title of some administration pages was not
	  localized (STR #1548)
	- The edit-config.tmpl file was not generated or
	  installed for the Spanish or Japanese localizations
	  (STR #1547)
	- The mimeDelete() function freed the types before the
	  filters, but the filters needed the type data (STR #1558)
	- The scheduler didn't keep track of the status pipes
	  properly, leading to a bad select() for multi-file jobs
	  (STR #1559)
	- The cupstestdsc program didn't validate the ordinal
	  page number value for %%Page: comments.


CHANGES IN CUPS V1.2rc2

	- The scheduler was not always using the string pool,
	  causing random crashes.
	- The lpmove and the web interface's Move Job button did
	  not work with stopped jobs (STR #1534)
	- The PostScript filter did not handle the page-set
	  option properly with number-up printing (STR #1543)
	- The scheduler now only warns about unsupported ACLs
	  once (STR #1532)
	- The "fitplot" option did not work with output from
	  Mozilla (STR #1542)
	- The imagetops filter did not work with Level 2 or 3
	  printers (STR #1533)