@@ -1,8 +1,10 @@
-CHANGES.txt - 2006-04-18
+CHANGES.txt - 2006-04-19
 ------------------------
 
 CHANGES IN CUPS V1.2rc3
 
+	- The scheduler would hang when listing PPD files for a
+	  manufacturer whose name contained spaces (STR #1567)
 	- Added the SNMP backend for network printer discovery
 	  (STR #1555)
 	- cupstestppd now fails PPD files with 1284DeviceId
